test/ui/src/compile_fail/std/sample_missing_value.rs
fn main() {
    emit::sample!(name: "my_metric");
}
